<package>
  <name>behavior_tree</name>
  <version>1.1.0</version>
  <description>
      ROS behavior tree library. The leaf nodes (user defined) can be either in C++ or python.
      This version is adapted to the needs of the SARAFun EU project.
  </description>

  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>MIT</license>
  <author>Michele Colledanchise</author>
  <author>Rocco Santomo</author>
  <author>Petter Ögren</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>behavior_tree_core</run_depend>
  <run_depend>behavior_tree_leaves</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
