<?xml version="1.0"?>
<package>
  <name>behavior_tree_leaves</name>
  <version>0.0.0</version>
  <description>The behavior_tree_actions package</description>
  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <author>Michele Colledanchise</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>behavior_tree_core</build_depend>
  <run_depend>behavior_tree_core</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
